[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "serenipy"
dynamic = ["version"]
description = "Python tools for data analysis and processing"
readme = "README.md"
dependencies = [
    "pandas>=2.0.0",
]
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Patrick Garrett", email = "pgarrett@scripps.edu"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.dynamic]
version = {attr = "serenipy.__version__"}
